@@ -28,8 +28,9 @@ Revision:
 * #790: Adding new symlinks during upgrade (skenow)
 * #788: Setting control panel blocks to visible (skenow)
 * #791: Error during upgrade (dbversion 29) - alter table conf (skenow)
-* #794: HTMLPurifier options missing after upgrade
-* #543: Block positions don't sort by title
+* #794: HTMLPurifier options missing after upgrade (skenow)
+* #543: Block positions don't sort by title (skenow)
+* #792: Old system waiting block not deleted (skenow)
 
 === Impresscms 1.2 Beta ===
 Release date: 5 Sep 2009
